--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RevoFun - Home</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+  <header>
+    <h1>🎮 RevoFun</h1>
+    <p>Your portal to fun and simple browser games!</p>
+    <nav>
+      <ul>
+        <li><a href="games/number-guessing.html">Number Guessing</a></li>
+        <li><a href="games/rock-paper-scissors.html">Rock Paper Scissors</a></li>
+        <li><a href="games/clicker.html">Clicker Game</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="intro">
+      <h2>Welcome to RevoFun!</h2>
+      <p>Play quick and fun games right in your browser. No install needed.</p>
+    </section>
+
+    <section class="games-preview">
+      <div class="game-card">
+        <h3>Number Guessing</h3>
+        <p>Guess the number in 5 tries!</p>
+      </div>
+      <div class="game-card">
+        <h3>Rock Paper Scissors</h3>
+        <p>Classic RPS game against the computer.</p>
+      </div>
+      <div class="game-card">
+        <h3>Clicker Game</h3>
+        <p>Click as fast as you can before time runs out.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 RevoFun. All rights reserved.</p>
+  </footer>
 </body>
 </html>
