--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RevoFun - Home</title>
   <link rel="stylesheet" href="style.css" />
+  <a href="games/number-guessing.html">Number Guessing Game</a>
+
 </head>
 <body>
   <header>
