--- a/games/rock-paper-scissors.html
+++ b/games/rock-paper-scissors.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="rock-paper-scissors.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="shared-game-style.css" />
+
 </head>
 <body>
   <div class="container">
