--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RevoFun - Home</title>
   <link rel="stylesheet" href="style.css" />
-  <a href="games/number-guessing.html">Number Guessing Game</a>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -24,17 +25,17 @@
   <main>
     <section class="intro">
       <h2>Welcome to RevoFun!</h2>
-      <p>Play quick and fun games right in your browser. No install needed.</p>
+      <p>Play quick and fun games right in your browser. No install needed and for casual gamers only.</p>
     </section>
 
     <section class="games-preview">
       <div class="game-card">
         <h3>Number Guessing</h3>
-        <p>Guess the number in 5 tries!</p>
+        <p>Guess the number in 7 tries!</p>
       </div>
       <div class="game-card">
         <h3>Rock Paper Scissors</h3>
-        <p>Classic RPS game against the computer.</p>
+        <p>Classic RPS game against the BOT.</p>
       </div>
       <div class="game-card">
         <h3>Clicker Game</h3>
@@ -44,7 +45,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 RevoFun. All rights reserved.</p>
+    <p>&copy; 2025 Ariq Naufal. All rights reserved.</p>
   </footer>
 </body>
 </html>
