adding greeting automation on the main page & design a little bit on the games pages

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <main>
     <section class="intro">
       <h2>Welcome to RevoFun!</h2>
-      <p>Play quick and fun games right in your browser. No install needed and for casual gamers only.</p>
-    </section>
+      <p id="dynamicGreeting">Loading greeting...</p> <!-- JS will update this -->
+    </section>    
 
     <section class="games-preview">
       <div class="game-card">
@@ -48,4 +48,6 @@
     <p>&copy; 2025 Ariq Naufal. All rights reserved.</p>
   </footer>
 </body>
+<script src="index.js"></script>
+
 </html>
