adding icons into the button

--- a/games/rock-paper-scissors.html
+++ b/games/rock-paper-scissors.html
@@ -10,12 +10,13 @@
 
 </head>
 <body>
+  <!--The icons need to be updated soon -->
   <div class="container">
-    <h1>🪨📄✂️ Rock Paper Scissors</h1>
+    <h1>🧱📄✂️ Rock Paper Scissors</h1>
     <p>Choose your weapon:</p>
 
     <div class="buttons">
-      <button data-choice="rock">🪨 Rock</button>
+      <button data-choice="rock">🧱 Rock</button>
       <button data-choice="paper">📄 Paper</button>
       <button data-choice="scissors">✂️ Scissors</button>
     </div>
