--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <section class="intro">
       <h2>Welcome to RevoFun!</h2>
-      <p id="dynamicGreeting">Loading greeting...</p> <!-- JS will update this -->
+      <p id="dynamicGreeting">Loading greeting...</p> 
     </section>    
 
     <section class="games-preview">
@@ -45,6 +45,9 @@
   </main>
 
   <footer>
+    <div>
+
+    </div>
     <p>&copy; 2025 Ariq Naufal. All rights reserved.</p>
   </footer>
 </body>
