Redesign footer to match theme with animation and style

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
   <header>
-    <h1>🎮 RevoFun</h1>
-    <p>Your portal to fun and simple browser games!</p>
+    <h1 class="site-title">🎮 RevoFun</h1>
+    <p class="tagline">Your portal to fun and simple browser games!</p>
+  
     <nav>
       <ul>
         <li><a href="games/number-guessing.html">Number Guessing</a></li>
@@ -21,6 +22,7 @@
       </ul>
     </nav>
   </header>
+  
 
   <main>
     <section class="intro">
@@ -45,11 +47,16 @@
   </main>
 
   <footer>
-    <div>
-
+    <div class="footer-content">
+      <p>&copy; 2025 Ariq Naufal. All rights reserved.</p>
+      <p>
+        Built using HTML, CSS & JavaScript.<br>
+        <a href="https://github.com/ariq" target="_blank">View on GitHub</a>
+      </p>
     </div>
-    <p>&copy; 2025 Ariq Naufal. All rights reserved.</p>
   </footer>
+  
+  
 </body>
 <script src="index.js"></script>
 
