make an adjustments

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
     </nav>
   </header>
   
+  <section class="about-company">
+    <h2>About RevoFun</h2>
+    <p>
+      RevoFun is a game studio built for casual gamers who love fun, simple,
+      and interactive browser-based games. Our mission is to bring back the joy of
+      classic mini-games — fast, engaging, and accessible to everyone. Whether you're
+      killing time or chasing high scores, RevoFun is your go-to arcade.
+    </p>
+  </section>
+  
 
   <main>
     <section class="intro">
